# SIMS

./: .gitignore  CMakeLists.txt  main.cpp
include/: Admin.hpp  Dadabase.hpp  Database.hpp  Logger.hpp  Manager.hpp  Student.hpp
src/: Database.cpp  Logger.cpp  Manager.cpp  main.cpp
